--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,11 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
-  <a href="#"><i class="fas fa-comment-medical fa-lg mr-2"></i>About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <a href="#"><i class="fas fa-key mr-2"></i>คลังเอกสาร</a>
+  <a href="#"><i class="fas fa-key mr-2"></i>เอกสารเวียนทราบ</a>
+  <a href="#"><i class="fas fa-key mr-2"></i>เอกสารส่งออก</a>
+  <a href="#"><i class="fas fa-key mr-2"></i>เอกสารขออนุมัติ</a>
+  <a href="#"><i class="fas fa-key mr-2"></i>สั่งการ / เวียนทราบ</a>
+  <a href="#"><i class="fas fa-key mr-2"></i>รายงานการใช้กระดาษ</a>
 </div>
 
 <div class="container-main" id="main">
@@ -14,15 +16,15 @@
       <span class="text">HOME</span>
     </div>
     <div class="img-container">
-      <img src="/assets/home1.jpg" />
+      <img src="/assets/4.jpg" />
     </div>
     <div class="logo-container mt-3">
-      <img src="/assets/logo_div.png" />
+      <img src="/assets/3.jpg" />
     </div>
     <div class="title-container mt-3">
-      <span>ระบบสำนักงานอิเล็กทรอนิกส์</span>
+      <span>Group 2</span>
       <br>
-      <span>...</span>
+      <span>E-office</span>
     </div>
     <div class="content-footer">
       <span class="icon-container" style="margin-left: 40px; margin-right: 60px"><i
