--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,15 +12,15 @@
           <form [formGroup]="loginForm">
             <div class="input-group form-group">
               <div class="input-group-prepend">
-                <span class="input-group-text"><i class="fas fa-fist-raised"></i></span>
+                <span class="input-group-text"><i class="far fa-user"></i></span>
               </div>
-              <input formControlName="username" type="text" class="form-control" placeholder="@rtarf.mi.th" />
+              <input formControlName="rtarf_mail" type="text" class="form-control" placeholder="@rtarf.mi.th" />
             </div>
             <div class="input-group form-group">
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fas fa-key"></i></span>
               </div>
-              <input formControlName="password" type="password" class="form-control" placeholder="*******" />
+              <input formControlName="password" type="password" class="form-control" placeholngder="#######" />
             </div>
             <div class="row align-items-center remember">
               <input type="checkbox" />Remember Me
@@ -46,7 +46,7 @@
             Don't have an account?<a [routerLink]="['/register']">Register</a>
           </div>
           <div class="d-flex justify-content-center">
-            <a href="#">Create by Weerayut</a>
+            <a href="#">Create by Group 2</a>
           </div>
         </div>
       </div>
