--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
   <a href="#"><i class="fas fa-key mr-2"></i>เอกสารเวียนทราบ</a>
   <a href="#"><i class="fas fa-key mr-2"></i>เอกสารส่งออก</a>
   <a href="#"><i class="fas fa-key mr-2"></i>เอกสารขออนุมัติ</a>
-  <a href="#"><i class="fas fa-key mr-2"></i>สั่งการ / เวียนทราบ</a>
+  <a [routerLink]="['/command-add-file']">สั่งการ/เวียนทราบ</a>
   <a href="#"><i class="fas fa-key mr-2"></i>รายงานการใช้กระดาษ</a>
 </div>
 
