--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -78,7 +78,7 @@
             Have an account?<a [routerLink]="['/login']" class="link-text">Login</a>
           </div>
           <div class="d-flex justify-content-center">
-            <a class="creator-text" href="#">Create by Group 2</a>
+            <a [routerLink]="['/about']">Create by Group 2</a>
           </div>
         </div>
       </div>
