--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -29,7 +29,7 @@ html {
   padding: 50px;
   text-align: center;
   background-color: #474e5d;
-  color: white;
+  color: rgb(216, 216, 216);
 }
 
 .container {
