Add session with JWT

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,6 +25,8 @@
       <span>Group 2</span>
       <br>
       <span>E-office</span>
+      <br>
+      <span>{{userData.rank}}{{userData.first_name}} {{userData.last_name}}</span>
     </div>
     <div class="content-footer">
       <span class="icon-container" style="margin-left: 40px; margin-right: 60px"><i
