--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,7 @@
   <a href="#"><i class="fas fa-key mr-2"></i>เอกสารขออนุมัติ</a>
   <a [routerLink]="['/command-add-file']">สั่งการ/เวียนทราบ</a>
   <a href="#"><i class="fas fa-key mr-2"></i>รายงานการใช้กระดาษ</a>
+  <a [routerLink]="['/logout']"><i class="fas fa-sign-out-alt fa-lg mr-2"></i>ออกจากระบบ</a>
 </div>
 
 <div class="container-main" id="main">
