Create user doc list

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
   <a href="#"><i class="fas fa-key mr-2"></i>คลังเอกสาร</a>
-  <a href="#"><i class="fas fa-key mr-2"></i>เอกสารเวียนทราบ</a>
+  <a [routerLink]="['/user-document-list']"><i class="fas fa-key mr-2"></i>เอกสารเวียนทราบ</a>
   <a href="#"><i class="fas fa-key mr-2"></i>เอกสารส่งออก</a>
   <a href="#"><i class="fas fa-key mr-2"></i>เอกสารขออนุมัติ</a>
   <a [routerLink]="['/command-add-file']">สั่งการ/เวียนทราบ</a>
