--- a/src/app/command-check/command-check.component.html
+++ b/src/app/command-check/command-check.component.html
@@ -1,11 +1,14 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
-  <a href="#"><i class="fas fa-comment-medical fa-lg mr-2"></i>คลังเอกสาร</a>
-  <a [routerLink]="['/user-document-list']">เอกสารเวียนทราบ</a>
+  <a [routerLink]="['/owner-document-list']"><i class="fas fa-comment-medical fa-lg mr-2"></i>คลังเอกสาร</a>
+  <a [routerLink]="['/user-document-list']">เอกสารเวียนทราบ
+    <span *ngIf="actionNumber != 0" class="badge badge-danger">{{actionNumber}}</span>
+  </a>
   <a href="#">เอกสารส่งออก</a>
   <a href="#">เอกสารขออนุมัติ</a>
   <a [routerLink]="['/command-add-file']">สั่งการ/เวียนทราบ</a>
   <a href="#">รายงานการใช้กระดาษ</a>
+  <a [routerLink]="['/user-setting']"><i class="fas fa-user-cog fa-lg mr-2"></i>ตั้งค่าผู้ใช้งาน</a>
   <a [routerLink]="['/logout']"><i class="fas fa-sign-out-alt fa-lg mr-2"></i>ออกจากระบบ</a>
 </div>
 
@@ -36,7 +39,7 @@
           <div class="step-item active"></div>
         </div>
         <div class="label-container">
-          <div class="text">ขั้นตอนที่ 3:ตรวจสอบรายการส่งเอกสาร</div>
+          <div class="text">ขั้นตอนที่ 3 ตรวจสอบรายการส่งเอกสาร</div>
         </div>
       </div>
       <div class="document-container">
