--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -65,7 +65,7 @@
   text-align: center;
   // background dummy
   // background-image: url('../../assets/4.jpg');
-  background-color: #000000;
+  background-color: #b9b9b9;
 
   .content {
     margin: auto;
