--- a/src/app/user-setting/user-setting.component.html
+++ b/src/app/user-setting/user-setting.component.html
@@ -1,10 +1,12 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
   <a [routerLink]="['/owner-document-list']"><i class="fas fa-comment-medical fa-lg mr-2"></i>คลังเอกสาร</a>
-  <a [routerLink]="['/user-document-list']">เอกสารเวียนทราบ</a>
+  <a [routerLink]="['/user-document-list']"><i class="fas fa-file-alt mr-3"></i>เอกสารเวียนทราบ<span
+      *ngIf="actionNumber != 0" class="badge badge-danger">{{actionNumber}}</span>
+  </a>
   <a href="#">เอกสารส่งออก</a>
   <a href="#">เอกสารขออนุมัติ</a>
-  <a [routerLink]="['/command-add-file']">สั่งการ/เวียนทราบ</a>
+  <a [routerLink]="['/command-add-file']"><i class="fas fa-book mr-2"></i>สั่งการ/เวียนทราบ</a>
   <a href="#">รายงานการใช้กระดาษ</a>
   <a [routerLink]="['/user-setting']"><i class="fas fa-user-cog fa-lg mr-2"></i>ตั้งค่าผู้ใช้งาน</a>
   <a [routerLink]="['/logout']"><i class="fas fa-sign-out-alt fa-lg mr-2"></i>ออกจากระบบ</a>
