--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
+  font-family: 'Mitr', sans-serif !important;
 
   /* in-flight clone */
   .gu-mirror {
